# wagtail-localize-smartling

./: .coveragerc  .eslintignore  .gitignore  .pre-commit-config.yaml  .prettierignore  CHANGELOG.md  CONTRIBUTING.md  README.md  TODO.md  package-lock.json  package.json  pyproject.toml  pyrightconfig.json  ruff.toml  testmanage.py  tox.ini  tsconfig.json  webpack.config.js
.devcontainer/: devcontainer.json
.github/scripts/: report_nightly_build_failure.py
.github/workflows/: nightly.yml  publish.yml  test.yml
src/wagtail_localize_smartling/: __init__.py  admin_urls.py  apps.py  checks.py  components.py  constants.py  exceptions.py  forms.py  models.py  settings.py  signal_handlers.py  signals.py  sync.py  urls.py  utils.py  views.py  viewsets.py  wagtail_hooks.py
src/wagtail_localize_smartling/api/: client.py  serializers.py  types.py
src/wagtail_localize_smartling/management/commands/: populate_smartling_job_hashes.py  sync_smartling.py
src/wagtail_localize_smartling/migrations/: 0001_initial.py  0002_job_content_hash.py  0002_job_status_job_translation_job_uid.py  0002_remove_job_status_consistent_with_sync_dates_and_more.py  0003_alter_job_status.py  0003_alter_project_unique_together_project_environment_and_more.py  0003_data_add_translation_approver_auth_group.py  0004_landedtranslationtask.py  0004_remove_job_reference_number_alter_job_description_and_more.py  0005_job_file_uri.py  0005_jobtranslation.py  0006_populate_jobtranslation.py  0007_job_translations_through.py  0008_jobtranslation_content_hash.py
src/wagtail_localize_smartling/smartling_api/: client.py
src/wagtail_localize_smartling/templates/wagtail_localize/admin/: edit_translation.html
src/wagtail_localize_smartling/templates/wagtail_localize_smartling/admin/: edit_translation_message.html  job_report.html  landed_translation_tasks.html  resubmit_job.html  retry_job.html  smartling_status.html
src/wagtail_localize_smartling/templates/wagtail_localize_smartling/admin/components/: _landed_translation_task_panel.html
src/wagtail_localize_smartling/templates/wagtail_localize_smartling/admin/email/notifications/: translations_imported__body.txt  translations_imported__subject.txt
src/wagtail_localize_smartling/templates/wagtail_localize_smartling/admin/tables/: target_locales_cell.html
src/wagtail_localize_smartling/templatetags/: wagtail_localize_smartling_admin_tags.py
testapp/: __init__.py  apps.py  factories.py  models.py  settings.py  urls.py
testapp/migrations/: 0001_initial.py  0002_delete_default_homepage.py  0003_infosnippet.py
testapp/templates/testapp/: info_page.html
tests/: conftest.py  factories.py  test_client.py  test_models.py  test_serializers.py  test_settings.py  test_signal_handlers.py  test_sync.py  test_utils.py
tests/management_commands/: test_sync_smartling.py
tests/status/: test_status_view.py
tests/testapp/: __init__.py  apps.py  factories.py  models.py  settings.py
tests/testapp/migrations/: 0001_initial.py  0002_alter_infopage_body.py
tests/translation_component/: test_submit_translations.py
tests/translation_components/: test_submit_translations.py  test_update_translations.py
tests/views/: test_resubmit_job_view.py
wagtail_localize_smartling/: settings.py  views.py  wagtail_hooks.py
wagtail_localize_smartling/smartling_api/: serializers.py
wagtail_localize_smartling/static/wagtail_localize_smartling/js/: .gitignore
wagtail_localize_smartling/test/: __init__.py  apps.py  settings.py
